--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Happy b'day, Kisstea 🌸</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Happy Birthday Kisstea 🌸</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Playfair+Display:ital@0;1&family=Italiana&display=swap" rel="stylesheet">
@@ -88,8 +89,7 @@
 
     .firefly{ position:fixed; width:8px; height:8px; border-radius:50%; background:radial-gradient(circle at 30% 30%, #fff, #ffd), linear-gradient(180deg,#fff6b8,#ffd3b8); filter:blur(0.6px); opacity:0; z-index:160; pointer-events:none }
 
-    /* Ending translucent photo (kisstea) */
-    .firefly-photo {
+    .ending-photo {
       position:fixed;
       bottom:8%;
       left:50%;
@@ -103,7 +103,7 @@
       z-index:130;
     }
 
-    /* Polaroid Memory Box (hidden until triggered) */
+    /* Polaroid Memory Box */
     .memory-overlay{
       position:fixed; inset:0; background:rgba(8,8,12,0.45); display:none; z-index:2000; align-items:center; justify-content:center; padding:28px;
     }
@@ -130,38 +130,34 @@
       .polaroid{ width:42%; height:auto } .polaroid.video-card{ width:96% }
       .memory-box{ gap:10px; padding:12px }
     }
-
   </style>
 </head>
 <body>
   <div class="page">
-
-    <!-- MUSIC CONTROL -->
-    <div class="music-toggle" id="musicToggle" title="(tap 5x for a secret)">
+    <!-- Music control -->
+    <div class="music-toggle" id="musicToggle">
       <span class="muted">Music</span>
       <button id="playBtn" aria-label="play">▶ Play</button>
       <button id="muteBtn" aria-label="mute">🔈</button>
     </div>
 
-    <!-- LANDING -->
+    <!-- Landing -->
     <div class="hero" id="landing">
       <h1>happy b'day, kisstea</h1>
       <p class="lead">you are a poem in a sunlit field — this is for you. tap to begin</p>
       <button class="enter-btn" id="enterBtn">Enter the Meadow</button>
     </div>
 
-    <!-- MEADOW (hidden until enter) -->
+    <!-- Meadow -->
     <main class="meadow" id="meadow">
       <div class="container">
 
-        <!-- Flower Game -->
+        <!-- Flower game -->
         <div style="width:100%; text-align:center">
           <div class="section-title">pick a flower</div>
           <div style="color:var(--muted); margin-bottom:8px">click each flower to reveal a little note</div>
-          <div class="flower-field" id="flowerField" aria-live="polite">
-            <!-- Buttons injected by JS -->
-          </div>
-          <div id="foundAllMsg" class="found-msg" style="display:none">you found them all, kisstea 🌷 now open the cake or your gift 🎁</div>
+          <div class="flower-field" id="flowerField" aria-live="polite"></div>
+          <div id="foundAllMsg" class="found-msg" style="display:none"></div>
         </div>
 
         <!-- Cake -->
@@ -180,7 +176,7 @@
           <button class="cake-btn" id="cakeBtn">Blow the candles</button>
         </div>
 
-        <!-- Center: Gift -->
+        <!-- Gift -->
         <div style="width:100%; text-align:center; margin-top:8px">
           <div class="section-title">open your gift</div>
           <div style="color:var(--muted); margin-bottom:8px">click the box to see the message</div>
@@ -190,389 +186,23 @@
               <div class="gift-horizontal"></div>
               <div class="gift-bow"></div>
             </div>
-            <div class="message-card" id="messageCard" role="dialog" aria-hidden="true">
+            <div class="message-card" id="messageCard">
               <h2>For my Kisstea</h2>
               <p id="giftText">
-                happy b'day kisstea, i made some of my favourite memories w you in those few months and can't wait to explore more places together. you almost killed me but it was worth everything, and maybe, in another universe, we are still living together, waking up at 1 and eating momos for breakfast. i miss you a lot. and yes, shillong toh jana hi parega!
+                happy birthday kisstea! being roommates for those few months is gonna shine bright in my memories. here's to more adventures w you. i miss you and shillong trip toh karke hi rahenge.
               </p>
             </div>
           </div>
         </div>
 
         <!-- Ending -->
-        <div class="ending" id="endingSection" style="opacity:0; transform:translateY(8px); transition:all .9s ease">
+        <div class="ending" id="endingSection">
           <h3>may your days always bloom</h3>
-          <p style="margin-top:8px" id="endingSub">In every light that glows, I’ll always find you — my friend.</p>
+          <p id="endingSub">In every light that glows, I’ll always find you — my friend.</p>
         </div>
 
       </div>
     </main>
 
     <!-- Note popup -->
-    <div class="note-popup" id="notePopup"><p id="noteText"></p></div>
-
-    <!-- Night background for ending -->
-    <div class="night-bg" id="nightBg"></div>
-
-    <!-- Ending translucent photo -->
-    <img src="kisstea.jpg" alt="Kisstea" class="firefly-photo" id="kissteaPhoto" style="opacity:0">
-
-    <!-- Polaroid Memory Box overlay (hidden until Easter egg) -->
-    <div class="memory-overlay" id="memoryOverlay" aria-hidden="true">
-      <div class="memory-box" role="dialog" aria-label="Memory box">
-        <button class="memory-close" id="memoryClose">✕</button>
-
-        <div class="polaroid rot1">
-          <img src="memory1.jpg" alt="memory 1">
-          <div class="caption">our silly day</div>
-        </div>
-
-        <div class="polaroid rot2">
-          <img src="memory2.jpg" alt="memory 2">
-          <div class="caption">momo mornings</div>
-        </div>
-
-        <div class="polaroid rot3">
-          <img src="memory3.jpg" alt="memory 3">
-          <div class="caption">wild meadow</div>
-        </div>
-
-        <div class="polaroid rot4">
-          <img src="memory4.jpg" alt="memory 4">
-          <div class="caption">late-night chaos</div>
-        </div>
-
-        <div class="polaroid video-card">
-          <video id="memVideo" controls playsinline>
-            <source src="memoryvideo.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-          <div class="caption">a small clip</div>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-
-  <!-- LOCAL AUDIO: place salvatore.mp3 in the same folder -->
-  <audio id="bgAudio" loop>
-    <source src="salvatore.mp3" type="audio/mpeg">
-  </audio>
-
-  <script>
-    /* ====== Content ====== */
-    const flowerMessages = [
-      "you’re chaos but i love it",
-      "remember the momo breakfast? 🥟",
-      "shillong soon — pack your jacket! ⛰️",
-      "thank you for always making me laugh",
-      "you make everything more fun"
-    ];
-
-    /* ====== Elements ====== */
-    const landing = document.getElementById('landing');
-    const enterBtn = document.getElementById('enterBtn');
-    const meadow = document.getElementById('meadow');
-    const flowerField = document.getElementById('flowerField');
-    const notePopup = document.getElementById('notePopup');
-    const noteText = document.getElementById('noteText');
-    const foundAllMsg = document.getElementById('foundAllMsg');
-    const cake = document.getElementById('cake');
-    const cakeBtn = document.getElementById('cakeBtn');
-    const candles = document.getElementById('candles');
-    const gift = document.getElementById('gift');
-    const messageCard = document.getElementById('messageCard');
-    const bgAudio = document.getElementById('bgAudio');
-    const playBtn = document.getElementById('playBtn');
-    const muteBtn = document.getElementById('muteBtn');
-    const endingSection = document.getElementById('endingSection');
-    const nightBg = document.getElementById('nightBg');
-    const kissteaPhoto = document.getElementById('kissteaPhoto');
-
-    /* Memory overlay elements */
-    const musicToggle = document.getElementById('musicToggle');
-    const memoryOverlay = document.getElementById('memoryOverlay');
-    const memoryClose = document.getElementById('memoryClose');
-    const memVideo = document.getElementById('memVideo');
-
-    /* ====== Helpers: balloons/confetti/fireflies ====== */
-    function spawnBalloons(count=8){
-      for(let i=0;i<count;i++){
-        const b = document.createElement('div');
-        b.className = 'balloon';
-        b.style.left = (20 + Math.random()*60) + 'vw';
-        b.style.bottom = '-120px';
-        const colors = ['#f9d5e5','#e8dff3','#fff1d6','#dff6ea'];
-        b.style.background = colors[Math.floor(Math.random()*colors.length)];
-        b.style.zIndex = 140 + Math.floor(Math.random()*20);
-        document.body.appendChild(b);
-        const dur = 5000 + Math.random()*4000;
-        b.animate([{ transform:'translateY(0) rotate(0deg)', opacity:1 }, { transform:`translateY(-120vh) rotate(${Math.random()*80-40}deg)`, opacity:0.95 }], { duration:dur, easing:'ease-out' });
-        setTimeout(()=> b.remove(), dur + 400);
-      }
-    }
-
-    function spawnConfetti(n=60){
-      for(let i=0;i<n;i++){
-        const c = document.createElement('div');
-        c.style.position='fixed';
-        c.style.left = (40 + (Math.random()*60-30)) + 'vw';
-        c.style.top = (40 + Math.random()*20) + 'vh';
-        c.style.width = (6+Math.random()*8) + 'px';
-        c.style.height = (8+Math.random()*8) + 'px';
-        c.style.background = ['#f8d1e3','#d8e9f0','#fff1d6','#e8dff3'][Math.floor(Math.random()*4)];
-        c.style.transform = `rotate(${Math.random()*360}deg)`;
-        c.style.zIndex = 190;
-        c.style.borderRadius = '3px';
-        document.body.appendChild(c);
-        const dur = 1200 + Math.random()*1400;
-        c.animate([{ transform:'translateY(0) rotate(0deg)', opacity:1 },{ transform:`translateY(${(90+Math.random()*130)}vh) rotate(${Math.random()*720}deg)`, opacity:0 }], { duration:dur, easing:'cubic-bezier(.2,.9,.2,1)' });
-        setTimeout(()=> c.remove(), dur + 200);
-      }
-    }
-
-    function spawnFireflies(n=18){
-      for(let i=0;i<n;i++){
-        const f = document.createElement('div');
-        f.className = 'firefly';
-        const left = Math.random()*100;
-        const top = 20 + Math.random()*70;
-        f.style.left = left + 'vw';
-        f.style.top = top + 'vh';
-        document.body.appendChild(f);
-        const dx = (Math.random()*40 - 20);
-        const dy = (Math.random()*20 - 10);
-        const dur = 3000 + Math.random()*4000;
-        f.animate([
-          { transform:`translate(0px,0px) scale(1)`, opacity:0 },
-          { transform:`translate(${dx}px,${dy}px) scale(1.1)`, opacity:0.95 },
-          { transform:`translate(${dx*1.6}px,${dy*1.2}px) scale(.9)`, opacity:0.2 }
-        ], { duration:dur, iterations:Infinity, direction:'alternate', easing:'ease-in-out' });
-        f.animate([{ opacity:0 }, { opacity:0.9 }], { duration:600, fill:'forwards' });
-        setTimeout(()=> { f.style.opacity = 0; setTimeout(()=> f.remove(), 1600); }, 120000);
-      }
-    }
-
-    /* ====== Flower game ====== */
-    let revealedCount = 0;
-    const totalFlowers = flowerMessages.length;
-    function createFlowers(){
-      if (!flowerField) return;
-      flowerField.innerHTML = '';
-      revealedCount = 0;
-      for(let i=0;i<totalFlowers;i++){
-        const btn = document.createElement('button');
-        btn.className = 'flower-btn';
-        btn.setAttribute('aria-label','flower ' + (i+1));
-        btn.dataset.index = i;
-        btn.innerHTML = '🌸';
-        btn.addEventListener('click', () => {
-          if (btn.classList.contains('revealed')) return;
-          btn.classList.add('revealed');
-          revealedCount++;
-          showNote(flowerMessages[i]);
-          btn.animate([{ transform:'scale(1)' }, { transform:'scale(1.12)' }, { transform:'scale(1)' }], { duration:420 });
-          if (revealedCount === totalFlowers){
-            foundAllMsg.style.display = 'block';
-            spawnConfetti(40);
-          }
-        });
-        flowerField.appendChild(btn);
-      }
-    }
-
-    function showNote(text){
-      if (!notePopup || !noteText) return;
-      noteText.textContent = text;
-      notePopup.classList.add('show');
-      setTimeout(()=> notePopup.classList.remove('show'), 2400);
-    }
-
-    /* ====== Cake interaction ====== */
-    let candlesBlown = false;
-    function blowCandles(){
-      if (candlesBlown) return;
-      candlesBlown = true;
-      if (candles) candles.classList.add('blown');
-      spawnBalloons(9);
-      spawnConfetti(24);
-      setTimeout(()=> {
-        if (foundAllMsg) {
-          foundAllMsg.style.display = 'block';
-          foundAllMsg.textContent = "that was perfect — now open your gift 🎁";
-        }
-      }, 900);
-    }
-
-    /* ====== Gift reveal ====== */
-    if (gift) {
-      gift.addEventListener('click', () => {
-        if (!messageCard.classList.contains('show')) {
-          gift.animate([
-            { transform:'translateY(0) scale(1)' },
-            { transform:'translateY(-8px) scale(1.06)' },
-            { transform:'translateY(0) scale(1)' }
-          ], { duration:360, easing:'cubic-bezier(.2,.9,.2,1)' });
-          messageCard.classList.add('show');
-          spawnBalloons(10);
-          spawnConfetti(80);
-          setTimeout(()=> { startNightEnding(); }, 2800);
-        } else {
-          messageCard.classList.remove('show');
-        }
-      });
-    }
-
-    /* ====== Night / Firefly Ending ====== */
-    function startNightEnding(){
-      if (nightBg) nightBg.classList.add('show');
-      spawnFireflies(18);
-      // show kisstea photo gently
-      setTimeout(()=> { if (kissteaPhoto) kissteaPhoto.style.opacity = 0.22; }, 700);
-      setTimeout(()=> { if (endingSection) { endingSection.style.opacity = 1; endingSection.style.transform = 'translateY(0)'; } }, 700);
-      // gentle music fade and pause after some time
-      setTimeout(()=> {
-        try {
-          const volDecay = setInterval(()=> {
-            if (bgAudio && bgAudio.volume > 0.03) bgAudio.volume = Math.max(0, bgAudio.volume - 0.02);
-            else { if (bgAudio) { bgAudio.pause(); bgAudio.volume = 1; } clearInterval(volDecay); }
-          }, 500);
-        } catch(e){}
-      }, 12000);
-    }
-
-    /* ====== Init & Controls ====== */
-    if (enterBtn) {
-      enterBtn.addEventListener('click', () => {
-        landing.style.display = 'none';
-        meadow.style.display = 'block';
-        if (bgAudio) bgAudio.play().catch(()=>{});
-        createFlowers();
-        spawnPetals(8);
-      });
-    }
-
-    if (playBtn) {
-      playBtn.addEventListener('click', () => {
-        if (bgAudio.paused){ bgAudio.play().then(()=> playBtn.textContent = '❚❚ Pause').catch(()=>{}); }
-        else { bgAudio.pause(); playBtn.textContent = '▶ Play'; }
-      });
-    }
-    if (muteBtn) {
-      muteBtn.addEventListener('click', () => {
-        bgAudio.muted = !bgAudio.muted;
-        muteBtn.textContent = bgAudio.muted ? '🔇' : '🔈';
-      });
-    }
-
-    if (cakeBtn) {
-      cakeBtn.addEventListener('click', blowCandles);
-    }
-    if (cake) {
-      cake.addEventListener('click', blowCandles);
-    }
-
-    /* ====== Petals for vibe ====== */
-    function spawnPetals(n=10){
-      for(let i=0;i<n;i++){
-        const pet = document.createElement('div');
-        pet.className = 'petal';
-        pet.style.position = 'fixed';
-        pet.style.left = (5 + Math.random()*90) + 'vw';
-        pet.style.top = (-8 - Math.random()*10) + 'vh';
-        pet.style.width = (18 + Math.random()*18) + 'px';
-        pet.style.height = (12 + Math.random()*10) + 'px';
-        pet.style.background = 'linear-gradient(180deg,#f9e7f0,#f2dff2)';
-        pet.style.borderRadius = '10px';
-        pet.style.opacity = 0.9;
-        pet.style.zIndex = 60;
-        document.body.appendChild(pet);
-        const dur = 6000 + Math.random()*7000;
-        pet.animate([
-          { transform:`translateY(0) rotate(${Math.random()*40-20}deg)`, opacity:pet.style.opacity },
-          { transform:`translateY(${110 + Math.random()*40}vh) rotate(${Math.random()*360}deg)`, opacity:0.9 }
-        ], { duration:dur, iterations:1, easing:'linear' });
-        setTimeout(()=> pet.remove(), dur + 600);
-      }
-    }
-
-    /* ====== Memory Box Easter egg: 5 rapid taps on musicToggle ====== */
-    let clickCount = 0;
-    let clickTimer = null;
-    function resetClicks(){ clickCount = 0; if (clickTimer){ clearTimeout(clickTimer); clickTimer = null; } }
-
-    if (musicToggle) {
-      musicToggle.addEventListener('click', (e) => {
-        // allow normal controls to work
-        if (e.target === playBtn) { playBtn.click(); return; }
-        if (e.target === muteBtn) { muteBtn.click(); return; }
-        // count taps for easter egg
-        clickCount++;
-        if (clickTimer) clearTimeout(clickTimer);
-        clickTimer = setTimeout(()=> resetClicks(), 900); // 0.9s window to chain taps
-        if (clickCount >= 5) {
-          resetClicks();
-          openMemoryBox();
-        }
-      });
-    }
-
-    function openMemoryBox(){
-      if (!memoryOverlay) return;
-      memoryOverlay.classList.add('show');
-      memoryOverlay.setAttribute('aria-hidden','false');
-      // pause bg music gently
-      try { if (bgAudio) bgAudio.pause(); } catch(e){}
-    }
-    if (memoryClose) memoryClose.addEventListener('click', closeMemoryBox);
-    if (memoryOverlay) memoryOverlay
-btn.addEventListener("click", () => {
-    memoryBox.style.display = "block";
-    memoryVideo.play();
-});
-
-// ENDING FIREWORKS & FIREFLIES
-
-// Fireworks
-const fireworkContainer = document.createElement("div");
-fireworkContainer.className = "fireworks-container";
-document.body.appendChild(fireworkContainer);
-
-function createFirework() {
-    const firework = document.createElement("div");
-    firework.className = "firework";
-    firework.style.left = Math.random() * 100 + "vw";
-    firework.style.top = Math.random() * 100 + "vh";
-    fireworkContainer.appendChild(firework);
-    setTimeout(() => firework.remove(), 1000);
-}
-
-setInterval(createFirework, 500);
-
-// Fireflies
-const fireflyContainer = document.createElement("div");
-fireflyContainer.className = "fireflies";
-document.body.appendChild(fireflyContainer);
-
-function createFirefly() {
-    const f = document.createElement("div");
-    f.className = "firefly";
-    f.style.left = Math.random() * 100 + "vw";
-    f.style.animationDuration = 3 + Math.random() * 4 + "s";
-    fireflyContainer.appendChild(f);
-    setTimeout(() => f.remove(), 7000);
-}
-
-setInterval(createFirefly, 800);
-
-// PHOTO AT END
-const endPhoto = document.createElement("img");
-endPhoto.src = "kisstea.jpg";
-endPhoto.className = "end-photo";
-document.body.appendChild(endPhoto);
-
-// Fade in after everything
-setTimeout(() => {
-    endPhoto.style.opacity = "1";
-}, 5000);
+    <div class="note-popup" id="notePopup"><p id="
