--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 <div class="slide" id="slide4">
   <h2>Memory Box</h2>
   <div class="memory-box">
-    <div class="polaroid"><img src="memory1.jpg"><div class="caption">Day 1</div></div>
-    <div class="polaroid"><img src="memory2.jpg"><div class="caption">Momo Morning</div></div>
-    <div class="polaroid"><img src="memory3.jpg"><div class="caption">Forest Walk</div></div>
-    <div class="polaroid"><img src="memory4.jpg"><div class="caption">Late Night</div></div>
-    <div class="polaroid"><video controls><source src="memoryvideo.mp4" type="video/mp4"></video><div class="caption">Clip</div></div>
+    <div class="polaroid"><img src="memory1.jpg"><div class="caption">you</div></div>
+    <div class="polaroid"><img src="memory2.jpg"><div class="caption">are</div></div>
+    <div class="polaroid"><img src="memory3.jpg"><div class="caption">my</div></div>
+    <div class="polaroid"><img src="memory4.jpg"><div class="caption">fav</div></div>
+    <div class="polaroid"><img src="memory5.jpg"><div class="caption">person</div></div>
   </div>
   <button class="next-btn" onclick="nextSlide()">Next</button>
 </div>
